Wed Apr 17 20:59:23 1996  Marc Horowitz  <marc@mit.edu>

	* oid_ops.c: moved from mechglue
	
	* util_canonhost.c (g_canonicalize_host): cast the return value of
 	malloc()

	* gssapiP_generic.h: Added prototypes for oid_ops.c

	* gssapi.h: Make the types of OM_uint32 constants portable,
	fix some minor compile-time nits

	* Makefile.in: change the list of files which need to be built

Tue Apr  2 15:31:25 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Inlined list of source files for SRCS and
		OBJS (for Macintosh build).

Thu Feb 29 19:39:23 1996  Theodore Y. Ts'o  <tytso@dcl>

	* util_token.c (der_length_size, der_write_size): Fix to work on
		16-bit platforms (we don't allow greater than 64k tokens
		on these platforms).

Tue Feb 27 17:49:54 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapi.h (size_t): Make sure size_t and uid_t are defined under
	        MS-DOS.

Sat Feb 24 21:30:53 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapi.h (GSS_S_DUPLICATE_ELEMENT): New error code function.
		XXX Need to square number assigment with official C-binds
		draft once it is issued.

Wed Jan 24 20:48:15 1996  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* gssapi.h: Added definition of NPROTOTYPE to dtrt with Ultrix,
		etc.  Also added special case for Ultrix (limited
		prototype support).

Tue Jan 23 03:28:41 1996  Theodore Y. Ts'o  <tytso@dcl>

	* gssapiP_generic.h: Removed prototypes of functions that have
		been moved to the mechglue layer.

	* Makefile.in: Removed gssapi_generic.c, oid_ops.c, rel_buffer.c,
		and rel_oid_set.c --- these functions are now done in the
		mechglue layer.  

Wed Jan 10 21:31:42 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (gssapi_err_generic.$(OBJEXT)): Added ##DOS
		statements after gssapi_err_generic.$(OBJECT) to get it
		added to library on Windows.  (Patch from Doug Engert).

	* gssapi.h: Remove #if statement that used sizeof(xxx), since that
		won't work for most C compilers/C preprocessors!
